...
                Container(
                  margin: EdgeInsets.symmetric(horizontal: 6),
                  child: Row(
                    mainAxisAlignment: MainAxisAlignment.spaceBetween,
                    children: const [
                      DText(
                        'BID PRICE',
                        variant: TypographyVariant.h1,
                        textColor: DColors.greyColor,
                      ),
                      DText(
                        'QTY',
                        variant: TypographyVariant.h1,
...
